Play around with gettext
Still refuses to work

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,2 @@
-19/04/2003 - Moved to sourceforge.
-
-To make use of cvs and download space, Tux Football has now moved to sourceforge. Hopefully this will spur on more devlopment!
+Version 0.2
+===========
