Prepare the 0.3.0 release

--- a/NEWS
+++ b/NEWS
@@ -1,2 +1,6 @@
-Version 0.2
-===========
+Version 0.3.0
+=============
+Major graphics update including:
+- Menu fonts
+- Player anumations
+- In-game layout
